removed testing button on welcome page, got colors close to what I think they should be, and made the colors invert on dark mode as well -- still having the issue of sometimes the dark mode doesn't switch on every page every time

--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -4,6 +4,28 @@ div#app {
   height: 100vh;
 }
 
+.image-button-dark {
+  background: #3A3A3A;
+  border: #3A3A3A;
+  border-radius: 35px;
+}
+
+.image-button-dark:hover {
+  filter: invert(60%);
+}
+
+.image-button-dark:focus:not(.hover) {
+  border: none;
+  box-shadow: 0 0 0 4px #6c757d;
+  outline: none;
+}
+
+.image-button-dark:focus { // focus and hover
+  border: none;
+  box-shadow: 0 0 0 4px #808080;
+  outline: none;
+}
+
 .image-button {
   background: white;
   border: white;
@@ -11,12 +33,18 @@ div#app {
 }
 
 .image-button:hover {
-  backdrop-filter: invert(60%);
+  filter: invert(60%);
 }
 
-.image-button:focus {
+.image-button:focus:not(.hover) {
   border: none;
-  box-shadow: 0 0 2px #babcbe;
+  box-shadow: 0 0 0 4px #6c757d;
+  outline: none;
+}
+
+.image-button:focus { // focus and hover
+  border: none;
+  box-shadow: 0 0 0 4px #808080;
   outline: none;
 }
 
